[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/PlayerShip.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=3]

[node name="Main" type="Node"]

script = ExtResource( 1 )

[node name="GameTime" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Player" parent="." index="1" instance=ExtResource( 2 )]

scale = Vector2( 0.2, 0.2 )
_sections_unfolded = [ "Transform" ]

[node name="PlayerSpawn" type="Position2D" parent="." index="2"]

position = Vector2( 525.618, 285.243 )
scale = Vector2( 0.2, 0.2 )

[node name="HUD" parent="." index="3" instance=ExtResource( 3 )]

[connection signal="timeout" from="GameTime" to="." method="_on_GameTime_timeout"]

[connection signal="died" from="Player" to="." method="_on_Player_died"]

[connection signal="increment_score" from="Player" to="." method="_on_Player_increment_score"]


